--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/scripts.js" defer></script>
 </head>
 <body>
 
-<header>
-<%- include('../partials/header'); %>
-</header>
+
+<%- include('../partials/sidebar'); %>
+<%- include('../partials/list-container'); %>
 
 </body>
 </html>
